# wip-jormungand-fm-backend

./: .env.example  .flake8  .gitignore  .pdm-python  .pylintrc  .sqlfluff  .style.yapf  README.rst  config.py  pyproject.toml  scratchpad.run.py
config/: example.secrets.yaml  logging_settings.yaml  settings.yaml
docs/: api.rst  conf.py  index.rst
docs/API/: jormungand.dal.db.rst  jormungand.dal.rst  jormungand.rst  jormungand.utils.config.rst  jormungand.utils.exceptions.rst  jormungand.utils.logging.rst  jormungand.utils.rst  jormungand.utils.singleton.rst
jormungand/: __init__.py  __main__.py  logging_manager.py
jormungand/bll/: __init__.py  airports.py  base.py  countries.py  ourairports.py
jormungand/common/: annotated_fields.py  validators.py
jormungand/core/: __init__.py  db.py  exceptions.py  logging.py  singleton.py
jormungand/core/sql/: custom_functions.sql  migrate_v0.1.1_to_v0.2.0.sql  schema.old.003.sql  schema.old.004.sql  schema.old.005sql  schema.sql  schema.sql.backup  schema.v0.1.1.sql
jormungand/dal/: __init__.py  administrators.py  airline_companies.py  airports.py  base.py  countries.py  customers.py  db.py  ddl.py  ourairports.py  schema.sql  stored_procedures.sql  user.py  users.py
jormungand/dal/csv/: attribution.md
jormungand/dal/sql/: schema.sql
jormungand/db/: stored_procedures.sql
jormungand/flights/: search.py
jormungand/utils/: config.py  singleton.py
scratchpad/: amadeus_mod.py
scratchpad/data_dumps/: auth_token.json  flight_booking_confirm.json  flight_booking_request_example.json  flight_pricing.json  flights_search_one_way.json  flights_search_two_way.json
tests/: __init__.py  _utils.py  conftest.py  dataset.py  test_dynaconf.py  test_logging_manager.py  utils.py
tests/core/: test_db.py  test_dynaconf.py  test_logging.py
tests/dal/: test_administrators.py  test_airline_companies.py  test_base.py  test_countries.py  test_customers.py  test_db.py  test_ddl.py  test_user.py  test_users.py
tests/test_bll/: test_airports.py  test_ourairports.py
tests/test_core/: test_db.py  test_dynaconf.py  test_logging.py
tests/test_dal/: test_administrators.py  test_airline_companies.py_  test_airports.py  test_countries.py_  test_customers.py  test_users.py
tests/utils/: __init__.py  assets.py  data.py  temp_db.py  test_logging.py  test_singleton.py
(+9 files in other folders)
