[tool.poetry]
name = "jormungand-fm"
version = "0.1.0"
description = "A minimal flight managment app"
authors = ["c-c-k <c-c-k@nym.hush.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/c-c-k/jormungand-fm"
packages = [{include = "jormungand"}]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = {extras = ["yaml"], version = "^3.1.12"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pylint = "^2.17.2"
setuptools = "^67.7.2"

[tool.poetry.group.test.dependencies]
coverage = "^7.2.3"
pytest = "^7.3.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore:.*pkg_resources.declare_namespace.*:DeprecationWarning',
    'ignore:.*pkg_resources is deprecated as an API.*:DeprecationWarning',
]

[tool.coverage.run]
branch = true
source = ["jormungand"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
