[project]
name = "jormungand-fm"
version = "0.1.0"
description = "A minimal flight managment app"
authors = [
    {name = "c-c-k", email = "c-c-k@nym.hush.com"},
]
dependencies = [
    "dynaconf[yaml]>=3.1.12",
    "fastapi[all]>=0.97.0",
    "psycopg2-binary>=2.9.6",
    "pydantic[email]",
    "sqlalchemy>=2.0.13",
    "pymongo>=4.4.0",
]
requires-python = ">=3.10"
readme = "README.rst"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/c-c-k/jormungand-fm"

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "pylint>=2.17.4",
    "setuptools>=67.7.2",
    "yapf>=0.40.1",
]
test = [
    "coverage>=7.2.3",
    "pytest>=7.3.1",
]
doc = [
    "Sphinx>=6.1.3",
]

[tool.pdm.build]
includes = [
    "jormungand",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore:.*pkg_resources.declare_namespace.*:DeprecationWarning',
    'ignore:.*pkg_resources is deprecated as an API.*:DeprecationWarning',
    'ignore:.*mark\.current.*',
    'ignore:.*no.*default generator.*',
]

[tool.coverage.run]
branch = true
source = ["jormungand"]


